{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 287,
  "lineage": "26b07669-031e-fe32-c3fe-85c5f9de68b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0567b9141646757d1",
            "arn": "arn:aws:ec2:ap-northeast-2:365827924759:elastic-ip/eipalloc-0567b9141646757d1",
            "association_id": "eipassoc-0a6cc5f09759a6cd6",
            "domain": "vpc",
            "id": "eipalloc-0567b9141646757d1",
            "instance": "i-08c5b83f48eecb615",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d6eb4070201a1866",
            "private_dns": "ip-10-0-1-79.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-3-37-131-132.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.131.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "CDCI-PRD-BASTION-EIP"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-BASTION-EIP",
              "Project": "cdci"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_instance.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.aws_ami.amazon_linux_2023",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d2265ac70838f15",
            "arn": "arn:aws:ec2:ap-northeast-2:365827924759:instance/i-08c5b83f48eecb615",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CDCI-PRD-BASTION-PROFILE",
            "id": "i-08c5b83f48eecb615",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "codecaine",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6eb4070201a1866",
            "private_dns": "ip-10-0-1-79.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-3-37-131-132.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.131.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:365827924759:key/8ea26891-1e0b-4fbd-8697-8ea3e6f2e11d",
                "tags_all": {
                  "Environment": "prd",
                  "ManagedBy": "Terraform",
                  "Module": "compute-cluster",
                  "Project": "cdci"
                },
                "throughput": 125,
                "volume_id": "vol-020fbcbbedd6f9cda",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052cecfdbd1d30bdd",
            "tags": {
              "Name": "CDCI-PRD-BASTION"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-BASTION",
              "Project": "cdci"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8a2cd9753c2ab2f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.aws_ami.amazon_linux_2023",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "cdci-prd-alb-logs",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:loadbalancer/app/cdci-prd-alb/e608329d221edeed",
            "arn_suffix": "app/cdci-prd-alb/e608329d221edeed",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cdci-prd-alb-764706690.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:loadbalancer/app/cdci-prd-alb/e608329d221edeed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cdci-prd-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-065b3924d712acad1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052cecfdbd1d30bdd"
              },
              {
                "subnet_id": "subnet-0c5b89151f216582c"
              }
            ],
            "subnets": [
              "subnet-052cecfdbd1d30bdd",
              "subnet-0c5b89151f216582c"
            ],
            "tags": {
              "Name": "CDCI-PRD-ALB"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-ALB",
              "Project": "cdci"
            },
            "vpc_id": "vpc-08a241410715386e1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/13a62ced2e218515",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-tg/b6f66831260e6c4e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/13a62ced2e218515",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:loadbalancer/app/cdci-prd-alb/e608329d221edeed",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Project": "cdci"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:365827924759:certificate/3a49a205-d9b8-414a-9292-4c79002d6794",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-frontend-tg/67b0b13912b2a8f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:loadbalancer/app/cdci-prd-alb/e608329d221edeed",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Project": "cdci"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "analysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-analysis-tg/7c1c201b57e37246",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/c88d9348b883d447",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/analysis",
                      "/analysis/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/c88d9348b883d447",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82",
            "priority": 300,
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Project": "cdci"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.analysis",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "chatbot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-chatbot-tg/2695e80976509f0a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/a6eb4c8a54d48f80",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/chatbot",
                      "/chatbot/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/a6eb4c8a54d48f80",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82",
            "priority": 400,
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Project": "cdci"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.chatbot",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "history",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-history-tg/fc0af3d025edc4da",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/f59682eef7995d5f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/history",
                      "/history/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/f59682eef7995d5f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82",
            "priority": 100,
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Project": "cdci"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.history",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "mypage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-mypage-tg/49e1560d719b10dc",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/051d2d66e05e1e10",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/mypage",
                      "/mypage/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener-rule/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82/051d2d66e05e1e10",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:listener/app/cdci-prd-alb/e608329d221edeed/cf1d4a2a3dab6f82",
            "priority": 200,
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Project": "cdci"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.mypage",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "analysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-analysis-tg/7c1c201b57e37246",
            "arn_suffix": "targetgroup/cdci-prd-analysis-tg/7c1c201b57e37246",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-analysis-tg/7c1c201b57e37246",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cdci-prd-analysis-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CDCI-PRD-ANALYSIS-TG",
              "Service": "analysis"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-ANALYSIS-TG",
              "Project": "cdci",
              "Service": "analysis"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a241410715386e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-tg/b6f66831260e6c4e",
            "arn_suffix": "targetgroup/cdci-prd-tg/b6f66831260e6c4e",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-tg/b6f66831260e6c4e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:loadbalancer/app/cdci-prd-alb/e608329d221edeed"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cdci-prd-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CDCI-PRD-TG"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-TG",
              "Project": "cdci"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a241410715386e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chatbot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-chatbot-tg/2695e80976509f0a",
            "arn_suffix": "targetgroup/cdci-prd-chatbot-tg/2695e80976509f0a",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-chatbot-tg/2695e80976509f0a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cdci-prd-chatbot-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CDCI-PRD-CHATBOT-TG",
              "Service": "chatbot"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-CHATBOT-TG",
              "Project": "cdci",
              "Service": "chatbot"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a241410715386e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-frontend-tg/67b0b13912b2a8f3",
            "arn_suffix": "targetgroup/cdci-prd-frontend-tg/67b0b13912b2a8f3",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-frontend-tg/67b0b13912b2a8f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cdci-prd-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CDCI-PRD-FRONTEND-TG",
              "Service": "frontend"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-FRONTEND-TG",
              "Project": "cdci",
              "Service": "frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a241410715386e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "history",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-history-tg/fc0af3d025edc4da",
            "arn_suffix": "targetgroup/cdci-prd-history-tg/fc0af3d025edc4da",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-history-tg/fc0af3d025edc4da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cdci-prd-history-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CDCI-PRD-HISTORY-TG",
              "Service": "history"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-HISTORY-TG",
              "Project": "cdci",
              "Service": "history"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a241410715386e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mypage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-mypage-tg/49e1560d719b10dc",
            "arn_suffix": "targetgroup/cdci-prd-mypage-tg/49e1560d719b10dc",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:365827924759:targetgroup/cdci-prd-mypage-tg/49e1560d719b10dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cdci-prd-mypage-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CDCI-PRD-MYPAGE-TG",
              "Service": "mypage"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-MYPAGE-TG",
              "Project": "cdci",
              "Service": "mypage"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a241410715386e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:365827924759:security-group/sg-0f8a2cd9753c2ab2f",
            "description": "Security group for Bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8a2cd9753c2ab2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.2.3.4/32"
                ],
                "description": "SSH from allowed IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cdci-prd-bastion-20260310083239888600000001",
            "name_prefix": "cdci-prd-bastion-",
            "owner_id": "365827924759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CDCI-PRD-BASTION-SG"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "Terraform",
              "Module": "compute-cluster",
              "Name": "CDCI-PRD-BASTION-SG",
              "Project": "cdci"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a241410715386e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cluster",
            "data.terraform_remote_state.foundation"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}